syntax = "proto3";

package co.cobli.cameraMessage;

option java_multiple_files = true;
option java_package = "co.cobli.cameraMessage.protos";
option java_outer_classname = "AckMessageProtos";

message AckMessagePB {
    bool ackStatus = 1;
    uint64 sequence = 2;
    optional uint64 deviceId = 3;
}
