syntax = "proto3";

package co.cobli.cameraMessage;

option java_multiple_files = true;
option java_package = "co.cobli.cameraMessage.protos";
option java_outer_classname = "SettingsMessageProtos";

message SettingsMessagePB {
    string key = 1;
    string value = 2;
    SettingsType type = 3;
}

enum SettingsType {
    BOOLEAN = 0;
    STRING = 1;
    FLOAT = 2;
    DOUBLE = 3;
    INTEGER = 4;
    LONG = 5;
}